<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/screen_padding">

        <TextView
            style="@style/Text.Operator.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_sign_in_beeper" />

        <EditText
            android:id="@+id/user"
            style="@style/EditText.Operator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gap"
            android:hint="@string/sign_in_user_hint"
            android:importantForAutofill="no"
            android:inputType="text|textNoSuggestions"
            android:singleLine="true" />

        <EditText
            android:id="@+id/password"
            style="@style/EditText.Operator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gap"
            android:hint="@string/other_server_password_hint"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:singleLine="true" />

        <TextView
            android:id="@+id/status"
            style="@style/Text.Operator.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gap"
            android:visibility="gone" />

        <Button
            android:id="@+id/button"
            style="@style/Button.Operator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gap"
            android:text="@string/other_server_button" />

        <TextView
            style="@style/Text.Operator.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gap_large"
            android:text="@string/sign_in_no_password" />

        <TextView
            android:id="@+id/set_password"
            style="@style/Text.Operator.Link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gap"
            android:gravity="center"
            android:text="@string/sign_in_set_password" />
    </LinearLayout>
</ScrollView>
