<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/screen_padding">

        <TextView
            style="@style/Text.Operator.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_password_title" />

        <TextView
            style="@style/Text.Operator.Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gap"
            android:text="@string/set_password_explanation" />

        <EditText
            android:id="@+id/email"
            style="@style/EditText.Operator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gap"
            android:hint="@string/beeper_email_hint"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:singleLine="true" />

        <EditText
            android:id="@+id/new_password"
            style="@style/EditText.Operator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gap"
            android:hint="@string/set_password_new_hint"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:singleLine="true" />

        <TextView
            android:id="@+id/status"
            style="@style/Text.Operator.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gap"
            android:visibility="gone" />

        <Button
            android:id="@+id/button"
            style="@style/Button.Operator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gap"
            android:text="@string/set_password_send" />
    </LinearLayout>
</ScrollView>
