<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <android.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" />

    <ImageView
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        android:src="@drawable/logo_wordmark" />

    <TextView
        style="@style/Text.Operator.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/welcome_tagline" />

    <android.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4" />

    <Button
        android:id="@+id/sign_in_beeper"
        style="@style/Button.Operator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_sign_in_beeper" />

    <TextView
        android:id="@+id/other_server"
        style="@style/Text.Operator.Link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/welcome_other_server"
        android:textSize="?attr/opTextSmall" />

    <TextView
        style="@style/Text.Operator.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/welcome_needs_beeper"
        android:textSize="11sp" />
</LinearLayout>
