<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <include layout="@layout/view_app_mark" />

    <TextView
        android:id="@+id/title"
        style="@style/Text.Operator.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:text="@string/syncing_title" />

    <TextView
        android:id="@+id/count"
        style="@style/Text.Operator.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center" />

    <TextView
        style="@style/Text.Operator.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gap"
        android:gravity="center"
        android:text="@string/syncing_explanation" />

    <Button
        android:id="@+id/skip"
        style="@style/Button.Operator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gap_large"
        android:text="@string/syncing_skip" />
</LinearLayout>
